--- a/config/Shared.xcconfig
+++ b/config/Shared.xcconfig
@@ -33,7 +33,6 @@ GCC_TREAT_WARNINGS_AS_ERRORS = YES
 
 // Increase the strictness of warning.
 GCC_WARN_FOUR_CHARACTER_CONSTANTS = YES
-GCC_WARN_SHADOW = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL = YES
 GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED = YES
@@ -42,7 +41,6 @@ GCC_WARN_MISSING_PARENTHESES = YES
 GCC_WARN_ABOUT_MISSING_FIELD_INITIALIZERS = YES
 GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES
 GCC_WARN_ABOUT_MISSING_NEWLINE = YES
-GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = YES
 GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES
 GCC_WARN_HIDDEN_VIRTUAL_FUNCTIONS = YES
 GCC_WARN_ABOUT_POINTER_SIGNEDNESS = YES
@@ -54,3 +52,7 @@ GCC_WARN_UNUSED_VARIABLE = YES
 GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = YES
 GCC_WARN_ABOUT_INVALID_OFFSETOF_MACRO = YES
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
+GCC_WARN_SHADOW = YES
+
+// Unfortunately setting this to YES breaks the build of JSONKit
+GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = NO
