Renamed build config files.

--- a/config/Project-IttyBittyBits-Debug.xcconfig
+++ b/config/Project-IttyBittyBits-Debug.xcconfig
@@ -1,11 +1,11 @@
 //
-//  Debug.xcconfig
+//  Project-IttyBittyBits-Debug.xcconfig
 //  IttyBittyBits
 //
 //  Created by Oliver Jones on 17/06/11.
 //  Copyright 2011 Itty Bitty Apps Pty. Ltd. All rights reserved.
 //
-#include "Shared.xcconfig"
+#include "Project-IttyBittyBits-Shared.xcconfig"
 
 // No optimization
 GCC_OPTIMIZATION_LEVEL = 0
