--- a/config/Target-IttyBittyBits-Shared.xcconfig
+++ b/config/Target-IttyBittyBits-Shared.xcconfig
@@ -1,5 +1,5 @@
 //
-//  IttyBittyBits-Shared.xcconfig
+//  Target-IttyBittyBits-Shared.xcconfig
 //  IttyBittyBits
 //
 //  Created by Oliver Jones on 17/06/11.
