Added an additional warning flag (for uninitialised variables).

--- a/config/Project-IttyBittyBits-Shared.xcconfig
+++ b/config/Project-IttyBittyBits-Shared.xcconfig
@@ -53,6 +53,7 @@ GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = YES
 GCC_WARN_ABOUT_INVALID_OFFSETOF_MACRO = YES
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 GCC_WARN_SHADOW = YES
+GCC_WARN_UNINITIALIZED_AUTOS = YES
 
 // Unfortunately setting this to YES breaks the build of JSONKit
 GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = NO
