--- a/config/Project-IttyBittyBits-Release.xcconfig
+++ b/config/Project-IttyBittyBits-Release.xcconfig
@@ -6,3 +6,9 @@
 //  Copyright 2011 Itty Bitty Apps Pty. Ltd. All rights reserved.
 //
 #include "Project-IttyBittyBits-Shared.xcconfig"
+
+// Fast and small
+GCC_OPTIMIZATION_LEVEL = s
+
+// Don't raise assertions in Release code.
+OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1
