IBACarouselView and associated sample project.

--- a/config/Samples/Target-Samples-Shared.xcconfig
+++ b/config/Samples/Target-Samples-Shared.xcconfig
@@ -11,4 +11,8 @@ GCC_PRECOMPILE_PREFIX_HEADER = YES
 COPY_PHASE_STRIP = NO
 VALIDATE_PRODUCT = NO
 
+OTHER_LDFLAGS = -ObjC -all_load -lstdc++
+
 SAMPLES_SRCROOT = $(SRCROOT)/../samples
+
+CODE_SIGN_IDENTITY = iPhone Developer
