--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/johnezang/JSONKit.git
 [submodule "lib/jenkins-xcode-support"]
 	path = lib/jenkins-xcode-support
-	url = git@github.com:ittybittyapps/jenkins-xcode-support.git
+	url = https://github.com/ittybittyapps/jenkins-xcode-support.git
