--- a/config/Project-IttyBittyBits-Shared.xcconfig
+++ b/config/Project-IttyBittyBits-Shared.xcconfig
@@ -62,6 +62,18 @@ GCC_WARN_SHADOW = YES
 GCC_WARN_UNINITIALIZED_AUTOS = YES
 GCC_WARN_STRICT_SELECTOR_MATCH = YES
 GCC_WARN_UNDECLARED_SELECTOR = YES
+GCC_WARN_UNKNOWN_PRAGMAS = YES
+GCC_WARN_UNUSED_FUNCTION = YES
+
+// We're ok with unused parameters (sometimes parameters are optional).
+GCC_WARN_UNUSED_PARAMETER = NO
+
+// Unfortunately this warning tends to generate false positives.  Not sure why.  Therefore we turn it off.
+GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = NO
+
+// Additional warning flags that arn't covered by the GCC_WARN options
+// See http://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html for details on these options.
+WARNING_CFLAGS = -Wall -Wextra -Wunused -Wno-unused-parameter -Wfloat-equal -Wundef -Wc++-compat -Wstrict-prototypes -Wnested-externs -Wwrite-strings
 
 CLANG_WARN_CXX0X_EXTENSIONS = YES
 CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
@@ -78,5 +90,3 @@ LLVM_LTO = NO
 // Disable ARC (for the time being - will adopt later)
 CLANG_ENABLE_OBJC_ARC = NO
 
-// Unfortunately setting this to YES breaks the build of JSONKit
-GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = NO
