--- a/config/Project-IttyBittyBits-Shared.xcconfig
+++ b/config/Project-IttyBittyBits-Shared.xcconfig
@@ -6,7 +6,16 @@
 //  Copyright 2011 Itty Bitty Apps Pty. Ltd. All rights reserved.
 //
 
-ARCHS = $(ARCHS_STANDARD_32_BIT)
+// Normally we can just use the following config:
+// ARCHS = $(ARCHS_STANDARD_32_BIT)
+
+// But because the iOS5 SDK seems to have dropped armv6 from the 
+// ARCHS_STANDARD_32_BIT macro we have to specify it explicitly below.
+// The armv6 architecture is required when deploying on iOS4.2 (iPhone 3G)
+
+ARCHS[sdk=iphoneos*] = armv6 armv7
+ARCHS[sdk=iphonesimulator*] = i386
+
 SDKROOT = iphoneos
 IPHONEOS_DEPLOYMENT_TARGET = 4.2
 
