Remove logging completely below warning level in release builds.

--- a/config/Project-IttyBittyBits-Release.xcconfig
+++ b/config/Project-IttyBittyBits-Release.xcconfig
@@ -11,4 +11,5 @@
 GCC_OPTIMIZATION_LEVEL = s
 
 // Don't raise assertions in Release code.
-OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1
+GCC_PREPROCESSOR_DEFINITIONS = NS_BLOCK_ASSERTIONS=1 IBA_LOG_DEBUG_DISABLED=1 IBA_LOG_INFO_DISABLED=1 IBA_LOG_NOTICE_DISABLED=1
+
