Adds Theme Manager sample targets etc. Adds shared schemes for samples. Removed unnecessary xcconfig files.

--- a/config/Samples/Target-Samples-Shared.xcconfig
+++ b/config/Samples/Target-Samples-Shared.xcconfig
@@ -16,3 +16,7 @@ OTHER_LDFLAGS = -ObjC -all_load -lstdc++
 SAMPLES_SRCROOT = $(SRCROOT)/../samples
 
 CODE_SIGN_IDENTITY = iPhone Developer
+
+PRODUCT_NAME = $(TARGET_NAME)
+INFOPLIST_FILE = $(SAMPLES_SRCROOT)/$(TARGET_NAME)/$(TARGET_NAME)-Info.plist
+GCC_PREFIX_HEADER = $(SAMPLES_SRCROOT)/$(TARGET_NAME)/$(TARGET_NAME)-Prefix.pch
