Adds ResourceBundle tests & IBAResourceBundle implementation.

--- a/src/IttyBittyBits.xcodeproj/xcshareddata/xcschemes/IttyBittyBitsTests.xcscheme
+++ b/src/IttyBittyBits.xcodeproj/xcshareddata/xcschemes/IttyBittyBitsTests.xcscheme
@@ -28,6 +28,15 @@
       buildConfiguration = "Debug">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A7B4DAC913679F5D00543D61"
+            BuildableName = "IttyBittyBitsTests.app"
+            BlueprintName = "IttyBittyBitsTests"
+            ReferencedContainer = "container:IttyBittyBits.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.GDB"
@@ -35,7 +44,8 @@
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
