--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-*.xcuserdatad/*
-xcuserdata
+# Xcode
+build/
+.idea/
+*.pbxuser
+*.perspective
+*.perspectivev3
+*.mode1v3
+*.mode2v3
+*.xcuserdatad
+*.trace
+*project.xcworkspace/
+
+# OSX
 .DS_Store
-build
